# adventskalender

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  README.md  docker-compose.yml
.github/workflows/: analyze_backend.yml  analyze_frontend.yml  build_and_publish_backend_container.yml  build_and_publish_frontend_container.yml  build_backend.yml  build_backend_and_publsh_docker.yml  build_frontend.yml  build_releases_and_publish_container.yml
.husky/: pre-commit
.run/: Run adventskalender-backend.run.xml
adventskalender-backend/: .clippy.toml  .env  Cargo.toml  Dockerfile  Rocket.toml  build.rs  example_data.sql  generate_real_data_import.py  rust-toolchain.toml
adventskalender-backend/.run/: Run all backend tests.run.xml  Run backend in debug mode.run.xml  Run clippy.run.xml
adventskalender-backend/migrations/2021-10-15-132427_create_participants/: down.sql  up.sql
adventskalender-backend/migrations/2021-10-29-074148_create_users/: down.sql  up.sql
adventskalender-backend/migrations/2021-11-10-061002_make_username_unique/: down.sql  up.sql
adventskalender-backend/migrations/2021-11-10-061322_add_logging_fields_to_participants/: down.sql  up.sql
adventskalender-backend/migrations/2021-11-17-065845_create_performed_actions/: down.sql  up.sql
adventskalender-backend/migrations/2022-11-07-104718_disable_people_for_picking/: down.sql  up.sql
adventskalender-backend/migrations/2023-11-08-132424_present_selection_per_winner/: down.sql  up.sql
adventskalender-backend/src/: fairings.rs  guards.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  rocket_cors.rs  routes.rs  schema.rs
adventskalender-backend/src/rocket_cors/: fairing.rs  headers.rs
adventskalender-frontend/: .dockerignore  .eslintrc  .huskyrc  .prettierrc  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tslint.json  vite.config.js  vite.config.mts
adventskalender-frontend/docker/: default.conf
adventskalender-frontend/public/: index.html  manifest.json
adventskalender-frontend/public/fonts/: fonts.css
adventskalender-frontend/public/images/: christmasTree.jpg.txt  loginDark.jpg.txt
adventskalender-frontend/src/: api.ts  index.css  index.tsx  react-app-env.d.ts  schemas.ts  vite-env.d.ts
adventskalender-frontend/src/components/App/: index.tsx
adventskalender-frontend/src/components/AppHeader/: index.tsx
adventskalender-frontend/src/components/AuthenticationProvider/: index.tsx
adventskalender-frontend/src/components/Calendar/: index.tsx
adventskalender-frontend/src/components/Dashboard/: index.tsx
adventskalender-frontend/src/components/GoogleFontLoader/: index.tsx
adventskalender-frontend/src/components/LocalizationProvider/: index.tsx
adventskalender-frontend/src/components/Localized/: index.tsx
adventskalender-frontend/src/components/LocalizedText/: index.test.tsx  index.tsx
adventskalender-frontend/src/components/LocalizedText/__snapshots__/: index.test.tsx.snap
adventskalender-frontend/src/components/NavigationDrawer/: index.tsx
adventskalender-frontend/src/components/NumberOfWinnersSelector/: index.tsx
adventskalender-frontend/src/components/OutlinedCard/: index.test.tsx  index.tsx
adventskalender-frontend/src/components/OutlinedCard/__snapshots__/: index.test.tsx.snap
adventskalender-frontend/src/components/PasswordStrengthMeter/: index.tsx
adventskalender-frontend/src/components/PersonItem/: index.tsx
adventskalender-frontend/src/components/PickNewWinner/: index.test.tsx  index.tsx
adventskalender-frontend/src/components/RequireAuthentication/: index.tsx
adventskalender-frontend/src/components/Settings/: index.tsx
adventskalender-frontend/src/components/SideDrawer/: index.tsx
adventskalender-frontend/src/components/ThemeToggle/: index.tsx
adventskalender-frontend/src/components/TopControlBar/: index.test.tsx  index.tsx
adventskalender-frontend/src/components/Version/: index.tsx
adventskalender-frontend/src/components/WinnerCard/: index.tsx
adventskalender-frontend/src/components/WinningDaySelector/: index.test.tsx  index.tsx
adventskalender-frontend/src/components/ui/: card.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  sheet.tsx  sonner.tsx
adventskalender-frontend/src/dialogs/DeleteWinnerDialog/: index.tsx
adventskalender-frontend/src/dialogs/EditWinnerDialog/: index.tsx
adventskalender-frontend/src/dialogs/MoreWinnersDialog/: index.tsx
adventskalender-frontend/src/dialogs/NoParticipantsErrorDialog/: index.tsx
adventskalender-frontend/src/dialogs/PasswordChangedDialog/: index.tsx
adventskalender-frontend/src/dialogs/PasswordNotChangedDialog/: index.tsx
adventskalender-frontend/src/dialogs/SessionExpiryWarningDialog/: index.tsx
adventskalender-frontend/src/dialogs/UnknownErrorDialog/: index.tsx
adventskalender-frontend/src/dialogs/ViewWinnersDialog/: index.tsx
adventskalender-frontend/src/dialogs/WinnerDialog/: index.tsx
adventskalender-frontend/src/hooks/useAuthentication/: index.tsx
adventskalender-frontend/src/hooks/useToken/: index.ts
adventskalender-frontend/src/languages/: de.json  en.json
adventskalender-frontend/src/provider/AuthenticationProvider/: index.tsx
adventskalender-frontend/src/provider/LocalizationContext/: index.tsx
adventskalender-frontend/src/provider/LocalizationProvider/: index.tsx
adventskalender-frontend/src/provider/ThemeProvider/: index.tsx
adventskalender-frontend/src/utils/: CORSValidator.ts  RateLimiter.ts  SessionManager.ts
adventskalender-frontend/src/views/AuthenticatedView/: index.tsx
adventskalender-frontend/src/views/CalendarView/: index.tsx
adventskalender-frontend/src/views/DashboardView/: index.tsx
adventskalender-frontend/src/views/LoginView/: index.tsx
adventskalender-frontend/src/views/ParticipantView/: index.tsx
adventskalender-frontend/src/views/SettingsView/: index.tsx
adventskalender-frontend/src/views/VersionView/: index.tsx
key_generation/: .envrc  generate_key.py  requirements.txt
(+3 files in other folders)
