[package]
name = "adventskalender-backend"
version = "2023.11.9"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "A simple tool for organizing a christmas raffle (like a advent calendar)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/adventskalender"
exclude = [".github/", ".gitignore"]
build = "build.rs"
publish = false
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.rocket]
version = "0.5.0-rc.4"
default-features = false
features = ["json"]

[dependencies.chrono]
version = "0.4.31"
default-features = false
features = ["clock", "serde"]

[dependencies.log]
version = "0.4.20"
default-features = false

[dependencies.fern]
version = "0.6.2"
default-features = false

[dependencies.rand]
version = "0.8.5"
default-features = false

[dependencies.serde]
version = "1.0.147"
default-features = false

[dependencies.diesel]
version = "2.1.3"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "2.1.0"
default-features = false

[dependencies.bcrypt]
version = "0.15.0"
default-features = false
features = ["std"]

[dependencies.http]
version = "0.2.9"
default-features = false

[dependencies.jsonwebtoken]
version = "9.1.0"
default-features = false

[dependencies.regex]
version = "1.10.2"
default-features = false

[dependencies.unicase]
version = "2.7.0"
default-features = false

[dependencies.url]
version = "2.4.1"
default-features = false

[build-dependencies.vergen]
version = "8.2.6"
default-features = false
features = ["git", "git2", "rustc", "build", "cargo"]

[dependencies.r2d2]
version = "0.8.10"
default-features = false
