[package]
name = "adventskalender-backend"
version = "2023.12.6"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "A simple tool for organizing a christmas raffle (like a advent calendar)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/adventskalender"
exclude = [".github/", ".gitignore"]
build = "build.rs"
publish = false
rust-version = "1.81"

[badges]
maintenance = { status = "actively-developed" }

[dependencies.lazy_static]
version = "1.5.0"
default-features = false

[dependencies.rocket]
version = "0.5.1"
default-features = false
features = ["json"]

[dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["clock", "serde"]

[dependencies.log]
version = "0.4.22"
default-features = false

[dependencies.fern]
version = "0.7.0"
default-features = false

[dependencies.rand]
version = "0.8.5"
default-features = false

[dependencies.serde]
version = "1.0.214"
default-features = false

[dependencies.diesel]
version = "2.2.4"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "2.2.0"
default-features = false

[dependencies.bcrypt]
version = "0.15.1"
default-features = false
features = ["std"]

[dependencies.http]
version = "1.1.0"
default-features = false
features = ["std"]

[dependencies.jsonwebtoken]
version = "9.3.0"
default-features = false

[dependencies.regex]
version = "1.11.1"
default-features = false

[dependencies.unicase]
version = "2.8.0"
default-features = false

[dependencies.url]
version = "2.5.3"
default-features = false

[build-dependencies.vergen]
version = "9.0.1"
default-features = false
features = ["build", "cargo", "rustc"]

[build-dependencies.vergen-git2]
version = "1.0.1"
default-features = false

[dependencies.r2d2]
version = "0.8.10"
default-features = false

[dependencies.healthchecks]
version = "3.1.7"
default-features = false
