[package]
name = "adventskalender-backend"
version = "2024.12.1"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "A simple tool for organizing a christmas raffle (like a advent calendar)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/adventskalender"
exclude = [".github/", ".gitignore"]
build = "build.rs"
publish = false
rust-version = "1.81"

[badges]
maintenance = { status = "actively-developed" }

[dependencies.lazy_static]
version = "1.5.0"
default-features = false

[dependencies.rocket]
version = "0.5.1"
default-features = false
features = ["json"]

[dependencies.chrono]
version = "0.4.42"
default-features = false
features = ["clock", "serde"]

[dependencies.log]
version = "0.4.28"
default-features = false

[dependencies.fern]
version = "0.7.1"
default-features = false

[dependencies.rand]
version = "0.9.2"
default-features = false
features = ["thread_rng"]

[dependencies.serde]
version = "1.0.228"
default-features = false

[dependencies.diesel]
version = "2.2.12"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "2.2.0"
default-features = false

[dependencies.dashmap]
version = "6.1.0"
default-features = false

[dependencies.bcrypt]
version = "0.17.1"
default-features = false
features = ["std"]

[dependencies.http]
version = "1.4.0"
default-features = false
features = ["std"]

[dependencies.jsonwebtoken]
version = "9.3.1"
default-features = false
features = ["use_pem"]

[dependencies.regex]
version = "1.12.2"
default-features = false

[dependencies.ring]
version = "0.17.14"
default-features = false
features = ["std"]

[dependencies.unicase]
version = "2.8.1"
default-features = false

[dependencies.url]
version = "2.5.7"
default-features = false

[build-dependencies.vergen]
version = "9.0.6"
default-features = false
features = ["build", "cargo", "rustc"]

[build-dependencies.vergen-git2]
version = "1.0.7"
default-features = false

[dependencies.r2d2]
version = "0.8.10"
default-features = false

[dependencies.cookie]
version = "0.18"
default-features = false
features = ["secure", "private"]

[dependencies.time]
version = "0.3"
default-features = false

[dependencies.base64]
version = "0.22"
default-features = false
features = ["std"]

[dependencies.healthchecks]
version = "3.1.7"
default-features = false

[dependencies.passwords]
version = "3.1.16"
default-features = false
features = ["common-password"]
